# sf-profile

./: .gitignore  CMakeLists.txt  Profile.pro  main.cpp  profile.cpp  profile.h
exceptions/: profile_exception.h
models/: app_access.h  class_access.h  common_profile.cpp  common_profile.h  field_permission.cpp  field_permission.h  object_permission.h  page_access.cpp  record_type_access.cpp
src/models/: app_access.cpp  class_access.cpp  common_profile.cpp  object_permission.cpp  page_access.h  record_type_access.h  tab_access.cpp  tab_access.h
