# PROJECT DETAILS
PROJECT(sf_profile)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# BUILD CONVENTION
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
  SET(BUILD_POSTFIX "_d")
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
  SET(BUILD_POSTFIX "")
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)

# BUILD SETTINGS
ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-std=c++11)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# LIBRARY DEPENDENCIES
FIND_PACKAGE(Boost 1.55.0 COMPONENTS filesystem regex system thread QUIET REQUIRED)
IF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "  Boost library version 1.55 was not found")
ENDIF(NOT Boost_FOUND)

# DEFINE INCLUDE DIRECTOR
FILE(GLOB_RECURSE HEADERS src/*.h)
FILE(GLOB_RECURSE SOURCES src/*.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}${BUILD_POSTFIX})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
